--- a/style.css
+++ b/style.css
@@ -28,11 +28,13 @@ html {
 
 header {
   padding: 2rem;
+  position: relative;
 }
 
 body {
   font-family: "Spartan", sans-serif;
   font-size: var(--body-text);
+  overflow-x: hidden;
 }
 
 img {
@@ -64,6 +66,10 @@ h4 {
   font-size: var(--h4);
 }
 
+.page--title {
+  color: var(--veryLightGrey);
+}
+
 /* links */
 a {
   text-decoration: none;
@@ -71,12 +77,23 @@ a {
 }
 
 .nav--link {
-  color: var(--mediumGrey);
+  color: var(--veryDarkBlue);
   font-weight: 700;
+  margin-top: 2em;
+}
+
+.nav--link:first-child {
+  margin-top: 0;
 }
 
 .nav--link:hover {
   color: var(--veryDarkBlue);
+}
+
+@media (min-width: 600px) {
+  .nav--link {
+    color: var(--mediumGrey);
+  }
 }
 
 .featured--portfolio {
@@ -106,6 +123,11 @@ a {
   margin-left: 1.5rem;
 }
 
+.menu-btn {
+  border: none;
+  background: transparent;
+}
+
 .icon-arrow {
   stroke: var(--white);
 }
@@ -124,7 +146,6 @@ a {
   padding-top: 6.875rem;
   padding-bottom: 6.875rem;
 }
-
 /* sidebar */
 
 .sidebar {
@@ -133,7 +154,52 @@ a {
 
 /* navigation */
 
+.nav-group {
+  display: flex;
+  justify-content: space-between;
+}
+
 .nav {
+  background-color: var(--veryLightGrey);
+  display: flex;
+  flex-direction: column;
+  font-size: var(--h4);
+  padding: 3rem;
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  transform: translateX(100%);
+  z-index: 1;
+  transition: 280ms all 120ms ease-out;
+}
+
+.nav-open {
+  overflow: hidden;
+}
+
+.nav-open .nav {
+  transform: translateX(0%);
+}
+
+main {
+  position: relative;
+}
+
+.nav-open .modal {
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.modal {
+  position: absolute;
+  opacity: 0;
+  transition: 280ms all 120ms ease-in-out;
+  background-color: #000000;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
 
 /* hero */
@@ -147,7 +213,6 @@ a {
 }
 
 .project--text {
-  background: rgba(0, 0, 0, 0.35);
 }
 
 .btn-group {
@@ -204,11 +269,6 @@ a {
   .project-trinity {
     background-image: url("./assets/home/desktop/image-hero-trinity.jpg");
   }
-}
-
-/* welcome */
-.welcome--title {
-  color: var(--veryLightGrey);
 }
 
 /* featured section */
