--- a/style.css
+++ b/style.css
@@ -165,6 +165,15 @@ a {
   display: none;
 }
 
+@media (min-width: 600px) {
+  .sidebar {
+    display: initial;
+    position: sticky;
+    writing-mode: vertical-rl;
+    top: 0;
+  }
+}
+
 /* navigation */
 
 .nav-group {
